Remove .idea from repo

--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ Website/RAG AGENT(Cinematographer)/.env
 Website/RAG AGENT(Cinematographer)/credentials.json
 Website/RAG AGENT(Cinematographer)/token.json
 Website/RAG AGENT(Cinematographer)/placeholder
+.idea
